@@ -83,16 +83,20 @@ grub-core/commands/videoinfo.c
 grub-core/commands/videotest.c
 grub-core/commands/wildcard.c
 grub-core/commands/xnu_uuid.c
+grub-core/disk/AFSplitter.c
 grub-core/disk/ahci.c
 grub-core/disk/arc/arcdisk.c
 grub-core/disk/ata.c
+grub-core/disk/cryptodisk.c
 grub-core/disk/dmraid_nvidia.c
 grub-core/disk/efi/efidisk.c
+grub-core/disk/geli.c
 grub-core/disk/host.c
 grub-core/disk/i386/pc/biosdisk.c
 grub-core/disk/ieee1275/nand.c
 grub-core/disk/ieee1275/ofdisk.c
 grub-core/disk/loopback.c
+grub-core/disk/luks.c
 grub-core/disk/lvm.c
 grub-core/disk/mdraid1x_linux.c
 grub-core/disk/mdraid_linux.c
@@ -174,6 +178,59 @@ grub-core/gfxmenu/model.c
 grub-core/gfxmenu/theme_loader.c
 grub-core/gfxmenu/view.c
 grub-core/gfxmenu/widget-box.c
+grub-core/gnulib/alloca.c
+grub-core/gnulib/argp-ba.c
+grub-core/gnulib/argp-eexst.c
+grub-core/gnulib/argp-fmtstream.c
+grub-core/gnulib/argp-fs-xinl.c
+grub-core/gnulib/argp-help.c
+grub-core/gnulib/argp-parse.c
+grub-core/gnulib/argp-pin.c
+grub-core/gnulib/argp-pv.c
+grub-core/gnulib/argp-pvh.c
+grub-core/gnulib/argp-xinl.c
+grub-core/gnulib/asnprintf.c
+grub-core/gnulib/basename-lgpl.c
+grub-core/gnulib/btowc.c
+grub-core/gnulib/dirname-lgpl.c
+grub-core/gnulib/error.c
+grub-core/gnulib/fnmatch.c
+grub-core/gnulib/fnmatch_loop.c
+grub-core/gnulib/getdelim.c
+grub-core/gnulib/getline.c
+grub-core/gnulib/getopt1.c
+grub-core/gnulib/getopt.c
+grub-core/gnulib/localcharset.c
+grub-core/gnulib/malloc.c
+grub-core/gnulib/mbrtowc.c
+grub-core/gnulib/mbsinit.c
+grub-core/gnulib/mbsrtowcs.c
+grub-core/gnulib/mbsrtowcs-state.c
+grub-core/gnulib/memchr.c
+grub-core/gnulib/mempcpy.c
+grub-core/gnulib/nl_langinfo.c
+grub-core/gnulib/printf-args.c
+grub-core/gnulib/printf-parse.c
+grub-core/gnulib/progname.c
+grub-core/gnulib/rawmemchr.c
+grub-core/gnulib/realloc.c
+grub-core/gnulib/regcomp.c
+grub-core/gnulib/regex.c
+grub-core/gnulib/regexec.c
+grub-core/gnulib/regex_internal.c
+grub-core/gnulib/sleep.c
+grub-core/gnulib/stdio-write.c
+grub-core/gnulib/strcasecmp.c
+grub-core/gnulib/strchrnul.c
+grub-core/gnulib/strerror.c
+grub-core/gnulib/stripslash.c
+grub-core/gnulib/strncasecmp.c
+grub-core/gnulib/strndup.c
+grub-core/gnulib/strnlen1.c
+grub-core/gnulib/strnlen.c
+grub-core/gnulib/vasnprintf.c
+grub-core/gnulib/vsnprintf.c
+grub-core/gnulib/wcrtomb.c
 grub-core/hello/hello.c
 grub-core/hook/datehook.c
 grub-core/io/bufio.c
@@ -198,6 +255,7 @@ grub-core/kern/emu/lite.c
 grub-core/kern/emu/main.c
 grub-core/kern/emu/misc.c
 grub-core/kern/emu/mm.c
+grub-core/kern/emu/raid.c
 grub-core/kern/emu/time.c
 grub-core/kern/env.c
 grub-core/kern/err.c
@@ -264,6 +322,63 @@ grub-core/lib/ieee1275/datetime.c
 grub-core/lib/ieee1275/halt.c
 grub-core/lib/ieee1275/relocator.c
 grub-core/lib/legacy_parse.c
+grub-core/lib/libgcrypt/cipher/ac.c
+grub-core/lib/libgcrypt/cipher/arcfour.c
+grub-core/lib/libgcrypt/cipher/blowfish.c
+grub-core/lib/libgcrypt/cipher/camellia.c
+grub-core/lib/libgcrypt/cipher/camellia-glue.c
+grub-core/lib/libgcrypt/cipher/cast5.c
+grub-core/lib/libgcrypt/cipher/cipher.c
+grub-core/lib/libgcrypt/cipher/crc.c
+grub-core/lib/libgcrypt/cipher/des.c
+grub-core/lib/libgcrypt/cipher/dsa.c
+grub-core/lib/libgcrypt/cipher/ecc.c
+grub-core/lib/libgcrypt/cipher/elgamal.c
+grub-core/lib/libgcrypt/cipher/hash-common.c
+grub-core/lib/libgcrypt/cipher/hmac-tests.c
+grub-core/lib/libgcrypt/cipher/md4.c
+grub-core/lib/libgcrypt/cipher/md5.c
+grub-core/lib/libgcrypt/cipher/md.c
+grub-core/lib/libgcrypt/cipher/primegen.c
+grub-core/lib/libgcrypt/cipher/pubkey.c
+grub-core/lib/libgcrypt/cipher/rfc2268.c
+grub-core/lib/libgcrypt/cipher/rijndael.c
+grub-core/lib/libgcrypt/cipher/rmd160.c
+grub-core/lib/libgcrypt/cipher/rsa.c
+grub-core/lib/libgcrypt/cipher/seed.c
+grub-core/lib/libgcrypt/cipher/serpent.c
+grub-core/lib/libgcrypt/cipher/sha1.c
+grub-core/lib/libgcrypt/cipher/sha256.c
+grub-core/lib/libgcrypt/cipher/sha512.c
+grub-core/lib/libgcrypt/cipher/tiger.c
+grub-core/lib/libgcrypt/cipher/twofish.c
+grub-core/lib/libgcrypt/cipher/whirlpool.c
+grub-core/lib/libgcrypt-grub/cipher/arcfour.c
+grub-core/lib/libgcrypt-grub/cipher/blowfish.c
+grub-core/lib/libgcrypt-grub/cipher/camellia.c
+grub-core/lib/libgcrypt-grub/cipher/camellia-glue.c
+grub-core/lib/libgcrypt-grub/cipher/cast5.c
+grub-core/lib/libgcrypt-grub/cipher/crc.c
+grub-core/lib/libgcrypt-grub/cipher/des.c
+grub-core/lib/libgcrypt-grub/cipher/dsa.c
+grub-core/lib/libgcrypt-grub/cipher/ecc.c
+grub-core/lib/libgcrypt-grub/cipher/elgamal.c
+grub-core/lib/libgcrypt-grub/cipher/init.c
+grub-core/lib/libgcrypt-grub/cipher/md4.c
+grub-core/lib/libgcrypt-grub/cipher/md5.c
+grub-core/lib/libgcrypt-grub/cipher/primegen.c
+grub-core/lib/libgcrypt-grub/cipher/rfc2268.c
+grub-core/lib/libgcrypt-grub/cipher/rijndael.c
+grub-core/lib/libgcrypt-grub/cipher/rmd160.c
+grub-core/lib/libgcrypt-grub/cipher/rsa.c
+grub-core/lib/libgcrypt-grub/cipher/seed.c
+grub-core/lib/libgcrypt-grub/cipher/serpent.c
+grub-core/lib/libgcrypt-grub/cipher/sha1.c
+grub-core/lib/libgcrypt-grub/cipher/sha256.c
+grub-core/lib/libgcrypt-grub/cipher/sha512.c
+grub-core/lib/libgcrypt-grub/cipher/tiger.c
+grub-core/lib/libgcrypt-grub/cipher/twofish.c
+grub-core/lib/libgcrypt-grub/cipher/whirlpool.c
 grub-core/lib/LzFind.c
 grub-core/lib/LzmaDec.c
 grub-core/lib/LzmaEnc.c
@@ -371,6 +486,7 @@ grub-core/tests/example_functional_test.c
 grub-core/tests/lib/functional_test.c
 grub-core/tests/lib/test.c
 grub-core/tests/test_blockarg.c
+grub-core/unidata.c
 grub-core/video/bitmap.c
 grub-core/video/bitmap_scale.c
 grub-core/video/bochs.c
@@ -419,5 +535,4 @@ util/ieee1275/grub-ofpathname.c
 util/ieee1275/ofpath.c
 util/lvm.c
 util/misc.c
-util/raid.c
 util/resolve.c
